[metadata]
name = objectpool
version = 0.0.1
author = Dominique Heer
author_email = snake.arrow@online.de
description = An object pool implementation for python
url = https://github.com/snakearrow/objectpool
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
